<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoTest</string>
    <string name="action_settings">Settings</string>
    <string name="question">Question</string>
    <string name="answerA">Answer A</string>
    <string name="answerB">Answer B</string>
    <string name="answerC">Answer C</string>
    <string name="answerD">Answer D</string>
    <string name="answerE">Answer E</string>
    <string name="countDown5MinsTimerTextView">Koniec testu!</string>
    <string name="game_information_activity">Pełna koncentracja!!</string>
	<string name="information_activity">Nie ociągaj się - masz 30 sekund na wyświetlanie kolejnych pytań testu. Powodzenia!</string>
	<string name="button_play">Rozpocznij test</string>
    <string name="logo">Logo description</string>
    <string name="summation_title">Tytuł</string>
    <string name="summation_content">content</string>
    <string name="summation_content2">content2</string>
    <string name="get_name">Jak masz na imię?</string>
    
    <string name="player_name"></string>
    <string name="number_of_true_answers"></string>
    <string name="percent_of_true_answers"></string>
    
</resources>
