<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/background" > 
    
	<LinearLayout 
    android:id="@+id/layout"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/questionTextView"
        android:text="@string/question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textScaleX="1.1"
        android:scrollHorizontally="false"
        android:background="@color/grey"
        android:textColor="@color/buttonColor"
        android:gravity="center"
        />

    
    <Button 
        android:id="@+id/answerAButton"
        android:text="@string/answerA"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/abuttonimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:padding="3dp"
        android:textColor="@color/grey"
        android:textAllCaps="true"
        android:onClick="onClick"
        />
       
    <Button 
        android:id="@+id/answerBButton"
        android:text="@string/answerB"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/bbuttonimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:textColor="@color/grey"
        android:textAllCaps="true"
        android:onClick="onClick"
        />
    
    <Button 
        android:id="@+id/answerCButton"
        android:text="@string/answerC"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/cbuttonimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:textColor="@color/grey"
        android:textAllCaps="true"
        android:onClick="onClick"
        />
    
    <Button 
        android:id="@+id/answerDButton"
        android:text="@string/answerD"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/dbuttonimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:textColor="@color/grey"
        android:textAllCaps="true"
        android:onClick="onClick"
        />
    
    <Button 
        android:id="@+id/answerEButton"
        android:text="@string/answerE"
        android:background="@drawable/shape"
        android:drawableLeft="@drawable/ebuttonimage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:textColor="@color/grey"
        android:textAllCaps="true"
        android:onClick="onClick"
        />

    <TextView 
        android:id="@+id/countDown5MinsTimerTextView"
        android:text="@string/countDown5MinsTimerTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textScaleX="1.1"
        android:scrollHorizontally="false"
        android:textColor="@color/grey"
        android:gravity="center"
        />
    
	</LinearLayout>

</ScrollView>